feat: process database data

--- a/initial.ipynb
+++ b/initial.ipynb
@@ -268,6 +268,86 @@
     "dataframe = dataframe.drop(columns=\"CustomerID\")\n",
     "display(dataframe)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 50000 entries, 0 to 49999\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column                   Non-Null Count  Dtype  \n",
+      "---  ------                   --------------  -----  \n",
+      " 0   age                      50000 non-null  float64\n",
+      " 1   gender                   49997 non-null  object \n",
+      " 2   time_as_customer         49998 non-null  float64\n",
+      " 3   frequency_use            50000 non-null  float64\n",
+      " 4   calls_callcenter         50000 non-null  float64\n",
+      " 5   days_delay               50000 non-null  float64\n",
+      " 6   subscription             50000 non-null  object \n",
+      " 7   contract_duration        50000 non-null  object \n",
+      " 8   total_spent              50000 non-null  float64\n",
+      " 9   months_last_interaction  50000 non-null  float64\n",
+      " 10  canceled                 50000 non-null  float64\n",
+      "dtypes: float64(8), object(3)\n",
+      "memory usage: 4.2+ MB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "None"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 49996 entries, 0 to 49999\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column                   Non-Null Count  Dtype  \n",
+      "---  ------                   --------------  -----  \n",
+      " 0   age                      49996 non-null  float64\n",
+      " 1   gender                   49996 non-null  object \n",
+      " 2   time_as_customer         49996 non-null  float64\n",
+      " 3   frequency_use            49996 non-null  float64\n",
+      " 4   calls_callcenter         49996 non-null  float64\n",
+      " 5   days_delay               49996 non-null  float64\n",
+      " 6   subscription             49996 non-null  object \n",
+      " 7   contract_duration        49996 non-null  object \n",
+      " 8   total_spent              49996 non-null  float64\n",
+      " 9   months_last_interaction  49996 non-null  float64\n",
+      " 10  canceled                 49996 non-null  float64\n",
+      "dtypes: float64(8), object(3)\n",
+      "memory usage: 4.6+ MB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "None"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# 2 - Tratar os dados da base de dados\n",
+    "\n",
+    "display(dataframe.info())\n",
+    "dataframe = dataframe.dropna()\n",
+    "display(dataframe.info())"
+   ]
   }
  ],
  "metadata": {
