--- a/initial.ipynb
+++ b/initial.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -347,6 +347,30 @@
     "display(dataframe.info())\n",
     "dataframe = dataframe.dropna()\n",
     "display(dataframe.info())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "canceled\n",
+       "1.0    0.567905\n",
+       "0.0    0.432095\n",
+       "Name: proportion, dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# 3 - Análise inicial dos dados\n",
+    "\n",
+    "display(dataframe[\"canceled\"].value_counts(normalize=True))"
    ]
   }
  ],
